# rpg_tournament

./: Cargo.toml  README.md  build-wasm.sh  deploy-wasm.sh  rpg_tournament.js  run-wasm.sh  rustc-ice-2024-05-16T03_58_14-20352.txt
.cargo/: config.toml
assets/human/: animations.ron  material.ron.stdmat
assets/maps/: map.tmx  map_infinite.tmx  map_tiny.tmx  overworld.world  small_map.tmx  test_map_1.tmx  test_map_2.tmx  test_map_3.tmx
assets/maps/tilesets/: shape.tsx  spring_forest.tsx  spring_trees.tsx
assets/worlds/: overworld.world
recordings/: recording-1.webm
scripts/: release.sh
src/: act.rs  animation.rs  area.rs  asset.rs  batch.rs  camera.rs  common.rs  daynight.rs  debug.rs  equipment.rs  ext.rs  input.rs  item.rs  lib.rs  main.rs  objects.rs  overworld.rs  pixel.rs  player.rs  round.rs  screen.rs  sprite.rs  task.rs  tree.rs
src/action/: common.rs  mod.rs
src/asset/: common.rs  mod.rs
src/dsl/: class.rs  mod.rs  tree.rs
src/map/: entities.rs  loader.rs  mesh.rs  mod.rs  spawn.rs
src/mobs/: firefly.rs  mod.rs
src/screen/: classes.rs  mod.rs  tasks.rs  tree.rs
src/screen/screens/: mod.rs  options.rs  playground.rs  title.rs
src/task/: common.rs  ext.rs  mod.rs
src/ui/: dialog.rs  mod.rs
src/ui/dsl/: mod.rs  widgets.rs
src/ui/widgets/: components.rs  mod.rs
