[package]
name = "rpg_tournament"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }

[dependencies]
bevy = { version = "0.14" }
bevy-inspector-egui = "0.25.1"
bitflags = "2"
extension-trait = "1"
rand = "0.8"
smallvec = "1"
thiserror = "1"
bevy_mod_sprite3d = { git="https://github.com/Anti-Alias/bevy_mod_sprite3d.git", commit="62b08482ca3ec04a3d8ee70a9652a0e1ee4febbc" }
tiled-parser = { git="https://github.com/Anti-Alias/tiled-parser.git", default-features = false, features=["flate2"], commit="e478de3225680cd1b0eae03c648454b3baf0fe7e" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
debug = []
