[package]
name = "rpg_tournament"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }

[dependencies]
bevy = { version = "0.14" }
bevy-inspector-egui = "0.25.1"
bitflags = "2"
extension-trait = "1"
rand = "0.8"
smallvec = "1"
thiserror = "1"
bevy_mod_sprite3d = { git="https://github.com/Anti-Alias/bevy_mod_sprite3d.git", commit="bdf837d70d51ed87303f51006e650c0b85213d6b" }
tiled-parser = { git="https://github.com/Anti-Alias/tiled-parser.git", default-features = false, features=["flate2"], commit="e478de3225680cd1b0eae03c648454b3baf0fe7e" }
derive_more = { version = "1.0.0", features = ["from"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
debug = []

# for Linux
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# for Windows
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"