[package]
name = "rpg_tournament"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", features=["dynamic_linking"] }
#bevy-inspector-egui = "0.25.1"
bitflags = "2"
extension-trait = "1"
rand = "0.8"    
smallvec = "1"
thiserror = "1"
bevy_mod_sprite3d = { git="https://github.com/Anti-Alias/bevy_mod_sprite3d.git", rev="09d2544843d04924c8ef9852bbcd40a96dc4ccc6" }
tiled-parser = { git="https://github.com/Anti-Alias/tiled-parser.git", default-features = false, features=["flate2"] }
derive_more = { version = "1.0.0", features = ["from"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
debug = []
